TEST_PROGRAMS/VALID/05/if_else_reg_brace.go
/* If statements */

package main

func main() {
	x := true

	if x {
		//Do nothing
	} else {
		println(x)
	}
}
