TEST_PROGRAMS/INVALID/07/dangling_else.go
package main

func main() {
	if x > max {
		x = max
	} else {
		if x > max {
		x = max
	}
	else {
		return x
	}
	}
}
